man-db (2.5.6-3) UNRELEASED; urgency=low

  * Don't try to change I/O priority in an OpenVZ container (closes:
    #546680). Approach borrowed from virt-what.

 -- Colin Watson <cjwatson@debian.org>  Thu, 24 Sep 2009 13:26:36 +0100

man-db (2.5.6-2) unstable; urgency=low

  * Don't try to change I/O priority in a vserver (closes: #544999).

 -- Colin Watson <cjwatson@debian.org>  Sun, 06 Sep 2009 23:37:01 +0100

man-db (2.5.6-1) unstable; urgency=low

  * New upstream release:
    - Implement 'man -K', which was the last major remaining missing feature
      when comparing man-db with the man package (closes: #135926, LP:
      #390575).
    - Note that the exact rendering of (e.g.) italic text may vary depending
      on the output device (closes: #516808).
    - Don't create unnecessary database directories (closes: #472919).
    - Explicitly state that -P/$PAGER/$MANPAGER identifies a single command
      with no pipes (closes: #363250).
    - Make whatis/apropos only display any given manual page, or pointers to
      it, once (LP: #27113).
    - Map CP1251 encoding to LESSCHARSET=windows, per less(1) (closes:
      #539690).
    - Loop through semicolon-separated coding tags in the first line of
      manual pages, and convert Emacs coding tags to ones that libiconv
      understands (closes: #496604).
    - Convert text to UTF-8 and then (if necessary) to the target encoding.
      This allows us to distinguish between "text not in input encoding" and
      "characters not representable in output encoding" (closes: #514963).
    - Replace database entries if the mtime of the new data is newer than
      that of the old data, even if the new data represents a symlink rather
      than a regular file (closes: #490582).
    - Increase limit on NAME sections from 2048 bytes to 8192, since some
      pages exceeding the previous limit have been observed in the wild
      (closes: #489907).
    - Cope with some more cases of database corruption (closes: #187750).