@@ -2,6 +2,9 @@ man-db (2.5.6-3) UNRELEASED; urgency=low
 
   * Don't try to change I/O priority in an OpenVZ container (closes:
     #546680). Approach borrowed from virt-what.
+  * Backport from trunk:
+    - When a source pipeline dies, make sure to drain its output before
+      discarding its output file descriptor (closes: #548153).
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 24 Sep 2009 13:26:36 +0100
 
